src/main/java/org/example/lab_3/error/CategoryUnknownException.java
package org.example.lab_3.error;

public class CategoryUnknownException extends RuntimeException {

	public CategoryUnknownException(String message) {
		super(message);
	}
}
